--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -15,3 +15,90 @@
 }
 
 /*Head Styling --------------------------------- */
+/*Search Styling --------------------------------- */
+
+.search {
+  padding: 20px 0;
+}
+
+.search .logo img {
+  width: auto;
+  height: auto;
+}
+
+.search .width {
+  width: 20%;
+}
+
+.search-box {
+  width: 80%;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+.search-box i {
+  width: 5%;
+  text-align: center;
+  font-size: 20px;
+  opacity: 0.5;
+  padding: 15px 20px;
+}
+
+.search-box input {
+  width: 100%;
+  padding: 10px;
+}
+
+::placeholder {
+  font-size: 20px;
+}
+
+.search-box span {
+  width: 20%;
+  opacity: 0.5;
+  border-left: 2px solid rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+
+.cart {
+  position: relative;
+}
+
+.search .cart span {
+  position: absolute;
+  top: -10px;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #e94560;
+  font-size: 12px;
+  color: #fff;
+}
+
+.searh .f-flex {
+  justify-content: flex-end;
+}
+
+/*Search Styling --------------------------------- */
+
+/*Categories Styling --------------------------------- */
+.categories {
+  background-color: #f6f9fc;
+  padding: 0 30px;
+  border-radius: 5px;
+  height: 6vh;
+  margin-top: 5px;
+}
+
+.categories span {
+  margin-right: 20px;
+  font-size: 30px;
+  margin-top: 30px;
+}
+
+.categories h4 {
+  font-weight: 500;
+}
+
+/*Categories Styling --------------------------------- */
