--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -15,6 +15,7 @@
 }
 
 /*Head Styling --------------------------------- */
+
 /*Search Styling --------------------------------- */
 
 .search {
@@ -76,7 +77,7 @@
   color: #fff;
 }
 
-.searh .f-flex {
+.search .f-flex {
   justify-content: flex-end;
 }
 
@@ -94,11 +95,107 @@
 .categories span {
   margin-right: 20px;
   font-size: 30px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .categories h4 {
   font-weight: 500;
+  margin-top: 12px;
 }
 
 /*Categories Styling --------------------------------- */
+
+header {
+  height: 8vh;
+  box-shadow: -1px 15px 17px -8px rgba(0, 0, 0, 0.1);
+}
+
+header ul {
+  line-height: 8vh;
+}
+
+header ul li {
+  margin-left: 30px;
+}
+
+header ul li a {
+  transition: 500ms;
+  font-size: 15px;
+  font-weight: 400;
+}
+header ul li a:hover {
+  color: #e94560;
+}
+
+.open {
+  display: none;
+}
+
+.search.active {
+  height: 12vh;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: -1px 11px 24px -11px rgba(0, 0, 0, 0.2);
+  transition: 500ms;
+}
+
+@media (max-width: 768px) {
+  header ul {
+    padding-top: 30px;
+  }
+  .nav-links-MobileMenu {
+    position: absolute;
+    display: block;
+    list-style: none;
+    box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    left: 0;
+    top: 0;
+    transition: all 500ms ease;
+    width: 60%;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 888;
+  }
+
+  header ul li {
+    width: 100%;
+    transition: all 500ms ease-in-out;
+    text-transform: uppercase;
+    line-height: 40px;
+  }
+  header ul li:first-child {
+    margin-top: 35px;
+  }
+  header .link {
+    display: none;
+  }
+  .close,
+  .open {
+    position: absolute;
+    top: 35px;
+    right: 20px;
+    color: #ff014f;
+    display: block;
+    font-size: 25px;
+    z-index: 999;
+  }
+  .close {
+    right: 45%;
+  }
+  .close .home-bth {
+    background: linear-gradient(145deg, #e2e8ec, #ffff);
+    color: #ff014f;
+    border-radius: 50%;
+    padding: 0;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+  }
+  .header.active {
+    height: 10vh;
+  }
+}
