--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ button {
   width: 23%;
   box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
   background-color: #fff;
-  height: 510px;
+  height: 29rem;
   padding: 15px 0;
   border-radius: 5px;
   margin-top: 5px;
@@ -136,4 +136,9 @@ button {
 
 .mtop {
   margin-top: 20px;
+}
+
+.heading i {
+  color: #e94560;
+  margin: 10px;
 }
